# vectorize-ecg

./: .gitignore  MFER_Reader.py  README.md  app.py  config.py  docker-compose.yml  download_dataset.py  download_repo.py  mfer2img.py  pyproject.toml  requirements.txt  search.py  setup.sh  vectorize.py
MFER_Reader/: MFER_Reader.py  __init__.py  codes.xlsx  reader.py  usage.ipynb
scripts/: upload_snapshot.py
